--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Corben:bold' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Nobile' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="main.css">
 
 </head>
 
@@ -38,7 +39,7 @@
     <button id="btnNext">Next</button>
     <button id="btnBack">Back</button>
 
-
+<script src="script.js"></script>
 </body>
 
 </html>
