--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <div class="container">
     <header id="logo">
       <h1>Quiz Application</h1>
+      <h4 id="score"></h4>
     </header>
 
     <h2 id=questionHeader>Question:</h2><p id='question'></p>
