--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Corben:bold' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Nobile' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="main.css">
 
 </head>
 
@@ -15,7 +16,8 @@
   <div class="container">
     <header id="logo">
       <h1>Quiz Application</h1>
-      <h4 id="score"></h4>
+      <h1 id="warning"></h1>
+ 
     </header>
 
     <h2 id=questionHeader>Question:</h2><p id='question'></p>
@@ -26,7 +28,7 @@
     <button id="btnNext">Next</button>
     <button id="btnBack">Back</button>
 
-
+<script src="script.js"></script>
 </body>
 
 </html>
