--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Corben:bold' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Nobile' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="minify/main.min.css">
 
 </head>
 
@@ -28,7 +28,7 @@
     <button id="btnNext">Next</button>
     <button id="btnBack">Back</button>
 
-<script src="script.js"></script>
+<script src="minify/script.min.js"></script>
 </body>
 
 </html>
